// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileLoader /w content 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #2B2D33;
  width: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  aligne-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: #F8F8F8;
  border: 1px dashed #D5D5D6;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 24px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  color: #808185;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: none;
}

<div
  class="c0"
  data-marker="FileLoader.Wrapper"
>
  <div
    class="c1"
    data-marker="FileLoader.Box"
  >
    <div
      class="c2"
      data-marker="FileLoader.Content"
    >
      Перетащите файлы
    </div>
    <input
      accept=""
      class="c3"
      data-marker="FileLoader"
      multiple=""
      type="file"
      value=""
    />
  </div>
</div>
`;

exports[`FileLoader /w content and subcontent 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #2B2D33;
  width: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #AAABAD;
  width: 100%;
  font-size: 12px;
  line-height: 18px;
  margin-top: 4px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  aligne-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: #F8F8F8;
  border: 1px dashed #D5D5D6;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 24px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  color: #808185;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: none;
}

<div
  class="c0"
  data-marker="FileLoader.Wrapper"
>
  <div
    class="c1"
    data-marker="FileLoader.Box"
  >
    <div
      class="c2"
      data-marker="FileLoader.Content"
    >
      Перетащите файлы
    </div>
    <div
      class="c3"
      data-marker="FileLoader.SubContent"
    >
      JPG, GIF, PNG, PDF или ZIP, до 150kb
    </div>
    <input
      accept=""
      class="c4"
      data-marker="FileLoader_1"
      multiple=""
      type="file"
      value=""
    />
  </div>
</div>
`;

exports[`FileLoader /w content as ReactNode 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #2B2D33;
  width: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  aligne-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: #F8F8F8;
  border: 1px dashed #D5D5D6;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 24px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  color: #808185;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: none;
}

.c5 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: none;
  vertical-align: baseline !important;
}

.c3 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
}

.c3:hover {
  color: #04607D;
}

.c3:hover .c4 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c3 > * {
  vertical-align: middle;
}

.c3 > *:not(:last-child) {
  margin-right: 8px;
}

<div
  class="c0"
  data-marker="FileLoader.Wrapper"
>
  <div
    class="c1"
    data-marker="FileLoader.Box"
  >
    <div
      class="c2"
      data-marker="FileLoader.Content"
    >
      Перетащите файлы сюда или 
      <a
        class="c3"
        data-marker="Link"
      >
        <span
          class="c4 c5"
          data-marker="Link.content.Wrapper"
        >
          загрузите документы
        </span>
      </a>
    </div>
    <input
      accept=""
      class="c6"
      data-marker="FileLoader_0"
      multiple=""
      type="file"
      value=""
    />
  </div>
</div>
`;

exports[`FileLoader /w file 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  width: 100%;
  height: 72px;
  opacity: 0;
  height: 0px;
  -webkit-animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
  animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin: 6px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  min-height: 40px;
  height: 40px;
  width: 40px;
  min-width: 40px;
  background-color: #F0F0FE;
  border-radius: 4px;
  color: #2B2D33;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  margin-right: 16px;
  width: 100%;
  height: 100%;
}

.c5 {
  outline: none;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden font-family:'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-weight: 500;
  font-size: 14px;
  line-height: 22px;
  margin-bottom: 4px;
  color: #2B2D33;
}

.c5:hover,
.c5:focus {
  color: #00809C;
}

.c6 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  margin-bottom: 8px;
  color: #AAABAD;
}

.c6:last-child {
  margin-bottom: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  color: #808185;
  min-width: 12px;
}

.c7:hover,
.c7:focus {
  color: #00809C;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="c0"
  data-marker="File.Box"
>
  <div
    class="c1"
    data-marker="File.Icon"
  >
    <div
      class="c2"
      data-marker="File.Img"
    >
      doc
    </div>
  </div>
  <div
    class="c3"
    data-marker="File.Main"
  >
    <div
      class="c4"
      data-marker="File.Info"
    >
      <div
        class="c5"
        data-marker="File.Name"
        tabindex="0"
      >
        file 1.doc
      </div>
      <div
        class="c6"
        data-marker="File.Data"
      />
    </div>
  </div>
  <div
    class="c7"
    data-marker="File.CloseIcon"
    tabindex="0"
  >
    <svg
      data-marker="File.Close"
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs
        data-marker="Close.defs"
      />
      <path
        d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
        data-marker="Close.path"
      />
    </svg>
  </div>
</div>
`;

exports[`FileLoader /w file closable = false 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  width: 100%;
  height: 72px;
  opacity: 0;
  height: 0px;
  -webkit-animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
  animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin: 6px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  min-height: 40px;
  height: 40px;
  width: 40px;
  min-width: 40px;
  background-color: #F0F0FE;
  border-radius: 4px;
  color: #2B2D33;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  margin-right: 16px;
  width: 100%;
  height: 100%;
}

.c5 {
  outline: none;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden font-family:'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-weight: 500;
  font-size: 14px;
  line-height: 22px;
  margin-bottom: 4px;
  color: #2B2D33;
}

.c5:hover,
.c5:focus {
  color: #00809C;
}

.c6 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  margin-bottom: 8px;
  color: #AAABAD;
}

.c6:last-child {
  margin-bottom: 0px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="c0"
  data-marker="File.Box"
>
  <div
    class="c1"
    data-marker="File.Icon"
  >
    <div
      class="c2"
      data-marker="File.Img"
    >
      doc
    </div>
  </div>
  <div
    class="c3"
    data-marker="File.Main"
  >
    <div
      class="c4"
      data-marker="File.Info"
    >
      <div
        class="c5"
        data-marker="File.Name"
        tabindex="0"
      >
        file 1.doc
      </div>
      <div
        class="c6"
        data-marker="File.Data"
      />
    </div>
  </div>
</div>
`;

exports[`FileLoader /w file progress 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  width: 100%;
  height: 72px;
  opacity: 0;
  height: 0px;
  -webkit-animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
  animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin: 6px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  min-height: 40px;
  height: 40px;
  width: 40px;
  min-width: 40px;
  background-color: #F0F0FE;
  border-radius: 4px;
  color: #2B2D33;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  margin-right: 16px;
  width: 100%;
  height: 100%;
}

.c5 {
  outline: none;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden font-family:'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-weight: 500;
  font-size: 14px;
  line-height: 22px;
  margin-bottom: 4px;
  color: #2B2D33;
}

.c5:hover,
.c5:focus {
  color: #00809C;
}

.c6 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  margin-bottom: 8px;
  color: #AAABAD;
}

.c6:last-child {
  margin-bottom: 0px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  color: #808185;
  min-width: 12px;
}

.c11:hover,
.c11:focus {
  color: #00809C;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.c8 {
  position: relative;
  width: 100%;
  height: 4px;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #E9EAEA;
  border-radius: 8px;
}

.c10 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  width: 50%;
  border-radius: 8px;
  -webkit-transition: all .2s;
  transition: all .2s;
  overflow: hidden;
  background-color: #00A5BC;
}

<div
  class="c0"
  data-marker="File.Box"
>
  <div
    class="c1"
    data-marker="File.Icon"
  >
    <div
      class="c2"
      data-marker="File.Img"
    >
      doc
    </div>
  </div>
  <div
    class="c3"
    data-marker="File.Main"
  >
    <div
      class="c4"
      data-marker="File.Info"
    >
      <div
        class="c5"
        data-marker="File.Name"
        tabindex="0"
      >
        file 1.doc
      </div>
      <div
        class="c6"
        data-marker="File.Data"
      >
        Загружено 50%
      </div>
    </div>
    <div
      class="c7"
      data-marker="File.Progress"
    >
      <div
        class="c8"
        data-marker="File.Progressbar"
      >
        <div
          class="c9"
          data-marker="Progressbar.Line"
        />
        <div
          class="c10"
          color="oslo100"
          data-marker="Progressbar.Progress"
          width="50"
        />
      </div>
    </div>
  </div>
  <div
    class="c11"
    data-marker="File.CloseIcon"
    tabindex="0"
  >
    <svg
      data-marker="File.Close"
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs
        data-marker="Close.defs"
      />
      <path
        d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
        data-marker="Close.path"
      />
    </svg>
  </div>
</div>
`;

exports[`FileLoader /w with files 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #2B2D33;
  width: 100%;
  font-size: 14px;
  line-height: 22px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  aligne-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: #F8F8F8;
  border: 1px dashed #D5D5D6;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 24px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  color: #808185;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin-top: 32px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  width: 100%;
  height: 72px;
  opacity: 0;
  height: 0px;
  -webkit-animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
  animation: bdsgSe 0.2s ease-in-out 0s alternate 1;
}

.c5:last-child {
  margin-bottom: 0px;
}

.c7 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  min-height: 40px;
  height: 40px;
  width: 40px;
  min-width: 40px;
  background-color: #F0F0FE;
  border-radius: 4px;
  color: #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  margin-right: 16px;
  width: 100%;
  height: 100%;
}

.c10 {
  outline: none;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden font-family:'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-weight: 500;
  font-size: 14px;
  line-height: 22px;
  margin-bottom: 4px;
  color: #2B2D33;
}

.c10:hover,
.c10:focus {
  color: #00809C;
}

.c11 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  margin-bottom: 8px;
  color: #AAABAD;
}

.c11:last-child {
  margin-bottom: 0px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  color: #808185;
  min-width: 12px;
}

.c12:hover,
.c12:focus {
  color: #00809C;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="c0"
  data-marker="FileLoader.Wrapper"
>
  <div
    class="c1"
    data-marker="FileLoader.Box"
  >
    <div
      class="c2"
      data-marker="FileLoader.Content"
    >
      Перетащите файлы
    </div>
    <input
      accept=""
      class="c3"
      data-marker="FileLoader_2"
      multiple=""
      type="file"
      value=""
    />
  </div>
  <div
    class="c4"
    data-marker="FileLoader.List"
  >
    <div
      class="c5"
      data-marker="File.Box"
    >
      <div
        class="c6"
        data-marker="File.Icon"
      >
        <div
          class="c7"
          data-marker="File.Img"
        >
          doc
        </div>
      </div>
      <div
        class="c8"
        data-marker="File.Main"
      >
        <div
          class="c9"
          data-marker="File.Info"
        >
          <div
            class="c10"
            data-marker="File.Name"
            tabindex="0"
          >
            file 1.doc
          </div>
          <div
            class="c11"
            data-marker="File.Data"
          />
        </div>
      </div>
      <div
        class="c12"
        data-marker="File.CloseIcon"
        tabindex="0"
      >
        <svg
          data-marker="File.Close"
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            data-marker="Close.defs"
          />
          <path
            d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
            data-marker="Close.path"
          />
        </svg>
      </div>
    </div>
    <div
      class="c5"
      data-marker="File.Box"
    >
      <div
        class="c6"
        data-marker="File.Icon"
      >
        <div
          class="c7"
          data-marker="File.Img"
        >
          doc
        </div>
      </div>
      <div
        class="c8"
        data-marker="File.Main"
      >
        <div
          class="c9"
          data-marker="File.Info"
        >
          <div
            class="c10"
            data-marker="File.Name"
            tabindex="0"
          >
            file 1.doc
          </div>
          <div
            class="c11"
            data-marker="File.Data"
          />
        </div>
      </div>
      <div
        class="c12"
        data-marker="File.CloseIcon"
        tabindex="0"
      >
        <svg
          data-marker="File.Close"
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            data-marker="Close.defs"
          />
          <path
            d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
            data-marker="Close.path"
          />
        </svg>
      </div>
    </div>
    <div
      class="c5"
      data-marker="File.Box"
    >
      <div
        class="c6"
        data-marker="File.Icon"
      >
        <div
          class="c7"
          data-marker="File.Img"
        >
          doc
        </div>
      </div>
      <div
        class="c8"
        data-marker="File.Main"
      >
        <div
          class="c9"
          data-marker="File.Info"
        >
          <div
            class="c10"
            data-marker="File.Name"
            tabindex="0"
          >
            file 1.doc
          </div>
          <div
            class="c11"
            data-marker="File.Data"
          />
        </div>
      </div>
      <div
        class="c12"
        data-marker="File.CloseIcon"
        tabindex="0"
      >
        <svg
          data-marker="File.Close"
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            data-marker="Close.defs"
          />
          <path
            d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
            data-marker="Close.path"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
